[gd_scene load_steps=4 format=3 uid="uid://cfm4swyp8c57k"]

[ext_resource type="Theme" uid="uid://5uq80ele5x1b" path="res://Assets/main_theme.tres" id="1_b3vw7"]
[ext_resource type="Script" uid="uid://du6tybatxvifl" path="res://Scripts/Menu/mod_panel.gd" id="2_6hvs7"]

[sub_resource type="CanvasTexture" id="CanvasTexture_6hvs7"]

[node name="ModPanel" type="PanelContainer"]
texture_filter = 1
anchors_preset = -1
anchor_right = 0.59142363
anchor_bottom = 0.1252716
offset_right = -0.3199997
offset_bottom = -0.1760025
theme = ExtResource("1_b3vw7")
script = ExtResource("2_6hvs7")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Mod Name"

[node name="Author" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "By: Kris"

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
alignment = 2

[node name="ToggleMod" type="Button" parent="MarginContainer/HBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
toggle_mode = true
text = "ENABLE"

[node name="RemoveMod" type="Button" parent="MarginContainer/HBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "REMOVE"

[node name="ProgressBar" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/Buttons/RemoveMod"]
self_modulate = Color(0.5294118, 0.08235294, 0.16470589, 0.38431373)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.01
value = 30.0
nine_patch_stretch = true
texture_progress = SubResource("CanvasTexture_6hvs7")

[node name="DeleteTimer" type="Timer" parent="MarginContainer/HBoxContainer/Buttons/RemoveMod"]
wait_time = 2.0

[connection signal="toggled" from="MarginContainer/HBoxContainer/Buttons/ToggleMod" to="." method="_on_toggle_mod_toggled"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/Buttons/RemoveMod" to="." method="_on_remove_mod_button_down"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Buttons/RemoveMod" to="." method="_on_remove_mod_button_up"]
[connection signal="timeout" from="MarginContainer/HBoxContainer/Buttons/RemoveMod/DeleteTimer" to="." method="_on_delete_timer_timeout"]
